# BulletHellReinforcmentLearning

./: .gitignore  BulletHellEnv.py  DQN.py  DQN_example.py  README.md  Utils.py  bullethell.py  main.py  mult_main.py  plot_training_metrics.py  plot_training_metrics_summary.py  pyproject.toml  reqs.txt  requirements.txt  run_actor.py  run_client.py  run_learner.py  run_server.py  shared_weights.h5  spawn_clients.ps1  test.h5  training_metrics.jsonl
src/bullet_hell_rl/: Utils.py  bullethell.py  fun.py  main.py  register.py  sim_model.py
src/bullet_hell_rl/DQN/: ActorComponent.py  ActorServerComponent.py  DQN.py  DQNLegacy.py  Learner.py  LearnerServerComponent.py  actor_learner_metrics.py  actor_learner_rl_bridge.py  actor_learner_rl_config.py
src/bullet_hell_rl/envs/: BulletHellEnv.py  MultiplayerBulletHellEnv.py
src/bullet_hell_rl/net/: __init__.py  actor.py  client.py  protocol.py  server.py
src/bullet_hell_rl/saved_networks/: 1000negativeforhit.h5  awesome.h5  awesome.h5.pkl  centerreward.h5  onehundredthou.h5  trained_model_temp.h5  trainfreq4.h5  wut.h5  wut.h5.pkl
src/bulllet_hell_rl/: Utils.py  bullethell.py  centerlower.h5  centerreward.h5  centerreward.h5.pkl  drive.py  fasttrain.h5  fasttrain.h5.pkl  fun.py  main.py  onehundredthou.h5.pkl  register.py  sim_model.py  trainfreq4.h5
src/bulllet_hell_rl/DQN/: DQN.py  DQNLegacy.py
src/bulllet_hell_rl/envs/: BulletHellEnv.py
src/bulllet_hell_rl/net/: client.py  protocol.py  server.py
trainingarchive/session4-26-11am/: shared_weights.h5
