[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bullethell-env"
version = "0.1.0"
description = "Bullet Hell Gymnasium Environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29",
    "pygame>=2.1.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."gymnasium.envs"]
BulletHell = "bullethell_env.register:register_envs"
